# toytorrent

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  debug.sh  derivation.nix  flake.nix  release.nix  shell.nix
.github/workflows/: test.yml
cmake/: BOTANConfig.cmake  FindBotan2.cmake
nix/: sources.json
nix/pkgs/cpr/: cpr-config.cmake.patch  default.nix
src/: bencode.cpp  bencode.hpp  bencode_parser.cpp  bencode_parser.h  bencode_parser.hpp  byteorder.cpp  byteorder.hpp  job.cpp  job.hpp  log.cpp  log.hpp  main.cpp  metainfo.cpp  metainfo.h  metainfo.hpp  peer.cpp  peer.h  peer.hpp  peer_message.cpp  peer_message.hpp  piece.cpp  piece.hpp  shared_constants.hpp  smolsocket.cpp  smolsocket.hpp  torrent.cpp  torrent.hpp  tracker.cpp  tracker.h  tracker.hpp
src/reusable/: byteorder.cpp  smolsocket.cpp  smolsocket.hpp
src/test/: bencode.cpp  bencode_parser.cpp  helpers.cpp  helpers.hpp  metainfo.cpp  peer.cpp  torrent.cpp  tracker.cpp
src/test/testdata/: lubuntu-16.04-localtrack.torrent
src/torrent/: bencode.cpp  bencode.hpp  metainfo.hpp  peer.cpp  peer.hpp  peer_message.cpp  peer_message.hpp  piece.cpp  piece.hpp  shared_constants.hpp  torrent.cpp  torrent.hpp  torrent_jobs.cpp  torrent_jobs.hpp  tracker.cpp  tracker.hpp
testdata/: lubuntu-16.04.torrent  zip_10MB.zip.torrent
